src/objects/RM_Approved_MFG__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM Approved MFG</relationshipLabel>
        <relationshipName>RM_Approved_MFG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RM Approved MFG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM Approved MFG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>